# packtl

./: CMakeLists.txt  Doxyfile  README.md
.github/workflows/: static.yml
docs/: Doxyfile  header.html  layout.xml
docs/assets/: overrides.css
include/packtl/: packs.cppm
